manifests/apps/gotify/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: gotify/server:2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotify-pvc
