manifests/apps/gotify/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: monitoring
spec:
  selector:
    app: gotify
  ports:
    - port: 80
      targetPort: 80
